@@ -354,6 +354,12 @@ SC_ENABLE_SYMBOLS
 
 TCL_DBGX=${DBGX}
 
+#--------------------------------------------------------------------
+# Embed the manifest if we can determine how
+#--------------------------------------------------------------------
+
+SC_EMBED_MANIFEST
+
 #------------------------------------------------------------------------
 # tclConfig.sh refers to this by a different name
 #------------------------------------------------------------------------
